# ficc-rates-bond-quant-demo

./: .gitignore  README.md  VERSION_LOG.md  pyproject.toml
assets/: README.md
backend/: README.md  __init__.py  app.py  schemas.py
backend/routes/: calculate.py  scenarios.py
case_studies/: 100bn_position_simulation.md  2026_30y_rates_trade.md  2026_china_gov_bond_ytd.md  README.md
demos/: ficc_rates_bond_demo.ipynb  run_demo.py
docs/: cloudflare_pages_deployment.md  ficc_quant_lab_roadmap.md  mvp_plan.md  system_design.md  versioning_strategy.md
frontend/: README.md  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: InputPanel.tsx  MaturityComparisonChart.tsx  PnLChart.tsx  ResultTable.tsx
frontend/src/lib/: bondMath.ts
frontend/src/styles/: globals.css
logs/: project_log.md
outputs/: sample_rates_bond_quant_report.md
src/ficc_rates_bond_quant/: __init__.py
